force-app/main/default/objects/Case/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <description>RUBX-3476 Account Owner field created for LCA cases</description>
    <formula>LCA_Account__r.Owner.FirstName + &#39; &#39;+  LCA_Account__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>