force-app/main/default/objects/Case/fields/Audit_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Audit_Closed_Date__c</fullName>
    <description>RUBX-1018: The date the audit was closed</description>
    <label>Audit Closed Date</label>
    <type>Date</type>
</CustomField>