force-app/main/default/objects/Case/fields/Audit_Method__c.field-meta.xml
<CustomField>
    <fullName>Audit_Method__c</fullName>
    <description>RUBX-1018: Picklist; “Audit Tool”, “Self Declaration”, “EMS”</description>
    <label>Audit Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audit Tool</fullName>
            </value>
            <value>
                <fullName>Self Declaration</fullName>
            </value>
            <value>
                <fullName>EMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>