force-app/main/default/objects/Case/fields/Audit_Result_Summary__c.field-meta.xml
<CustomField>
    <fullName>Audit_Result_Summary__c</fullName>
    <description>RUBX-1018: Summary of audit</description>
    <label>Audit Result Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>