force-app/main/default/objects/Case/fields/Auditable_Product__c.field-meta.xml
<CustomField>
    <fullName>Auditable_Product__c</fullName>
    <description>RUBX-1018: From Asset. Drives which template to use</description>
    <formula>Asset.Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auditable Product</label>
    <type>Text</type>
</CustomField>