force-app/main/default/objects/Case/fields/Backup_System_s_Information__c.field-meta.xml
<CustomField>
    <fullName>Backup_System_s_Information__c</fullName>
    <description>RUBX-1018: Picklist;
“No info provided”
“Backup is Compliant”
“Backup is Non Compliant”.</description>
    <label>Backup System(s) Information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No info provided</fullName>
            </value>
            <value>
                <fullName>Backup is Compliant</fullName>
            </value>
            <value>
                <fullName>Backup is Non Compliant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>