force-app/main/default/objects/Case/fields/Case_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Category__c</fullName>
    <description>RUBX 1940: Support Request - Information request/advice on product functionality/operational guidance,   Defect - Confirmed/suspected software defect requiring correction</description>
    <inlineHelpText>Support Request - Information request/advice on product functionality/operational guidance,   Defect - Confirmed/suspected software defect requiring correction</inlineHelpText>
    <label>Case Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Support Request</fullName>
            </value>
            <value>
                <fullName>Defect</fullName>
            </value>
            <value>
                <fullName>Enhancement</fullName>
            </value>
            <value>
                <fullName>3rd Party</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Procedural BU</fullName>
            </value>
            <value>
                <fullName>Procedural Cust</fullName>
            </value>
            <value>
                <fullName>Procedural IT</fullName>
            </value>
            <value>
                <fullName>Outage</fullName>
                <isActive>false</isActive>
                <label>Outage</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>