force-app/main/default/objects/Case/fields/Case_Closure_Details__c.field-meta.xml
<CustomField>
    <fullName>Case_Closure_Details__c</fullName>
    <description>RUBX-1940: Used to denote the detailed action taken when resolving or closing a case</description>
    <inlineHelpText>Used to denote the detailed action taken when resolving or closing a case</inlineHelpText>
    <label>Case Closure/Resolution Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>