force-app/main/default/objects/Case/fields/Client_Reference__c.field-meta.xml
<CustomField>
    <fullName>Client_Reference__c</fullName>
    <description>RUBX 1940: Client reference Number or Client track number</description>
    <inlineHelpText>Enter your own reference number in here to track the case</inlineHelpText>
    <label>Client Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>