force-app/main/default/objects/Case/fields/Compliance_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Sub_Status__c</fullName>
    <description>RUBX-1018: Compliance Sub status - values will be added in RUBX-1019</description>
    <label>Compliance Sub-Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>1st Follow-up</fullName>
            </value>
            <value>
                <fullName>2nd Follow-up</fullName>
            </value>
            <value>
                <fullName>3rd Follow-up</fullName>
            </value>
            <value>
                <fullName>4th Follow-up</fullName>
            </value>
            <value>
                <fullName>L2 - Audit Tool Assistance</fullName>
            </value>
            <value>
                <fullName>On Hold Pending AM</fullName>
            </value>
            <value>
                <fullName>On Hold Pending Audit Contact</fullName>
            </value>
            <value>
                <fullName>On Hold Pending Reports From Other Sites</fullName>
            </value>
            <value>
                <fullName>Pending Complete / Accurate Report</fullName>
            </value>
            <value>
                <fullName>Analysis submitted for QA</fullName>
            </value>
            <value>
                <fullName>QA Complete</fullName>
            </value>
            <value>
                <fullName>Referred to CommOps</fullName>
            </value>
            <value>
                <fullName>Referred to Licence Principal</fullName>
            </value>
            <value>
                <fullName>Re-audit, Referred to Licence Principal</fullName>
            </value>
            <value>
                <fullName>Referred to ProdMgt/Dev/LicDel</fullName>
            </value>
            <value>
                <fullName>Audit Holiday</fullName>
            </value>
            <value>
                <fullName>Audit Tools Issue</fullName>
            </value>
            <value>
                <fullName>Custom License/no VBP matrix</fullName>
            </value>
            <value>
                <fullName>Duplicate Account/LC</fullName>
            </value>
            <value>
                <fullName>GHO/Hub/Billing site</fullName>
            </value>
            <value>
                <fullName>Implementation/Support Issue</fullName>
            </value>
            <value>
                <fullName>Legal Sanctions/Political Situation</fullName>
            </value>
            <value>
                <fullName>New Customer/Product -  Less Than 1 Yr Data</fullName>
            </value>
            <value>
                <fullName>No Audit Report Received</fullName>
            </value>
            <value>
                <fullName>No Auditable Product</fullName>
            </value>
            <value>
                <fullName>Licensed - Product Not In Use</fullName>
            </value>
            <value>
                <fullName>Licensed - Not Implemented</fullName>
            </value>
            <value>
                <fullName>New customer/product, still under implementation</fullName>
            </value>
            <value>
                <fullName>Ongoing sales negotiations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>