force-app/main/default/objects/Case/fields/Contract_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expiry_Date__c</fullName>
    <description>RUBX-1018: Expiry date of the contract</description>
    <formula>Contract__r.SBQQ__ExpirationDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Expiry Date</label>
    <type>Date</type>
</CustomField>