force-app/main/default/objects/Case/fields/Contract_Notes__c.field-meta.xml
<CustomField>
    <fullName>Contract_Notes__c</fullName>
    <description>RUBX-1018: Contract Notes</description>
    <label>Contract Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>