force-app/main/default/objects/Case/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <description>RUBX-1018: Start date of the contract</description>
    <formula>Contract__r.StartDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>