force-app/main/default/objects/Case/fields/Data_Centre_Location__c.field-meta.xml
<CustomField>
    <fullName>Data_Centre_Location__c</fullName>
    <description>RUBX-1941: Field created for Outage Requirement</description>
    <label>Data Centre Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Las Vegas</fullName>
            </value>
            <value>
                <fullName>Norcross</fullName>
            </value>
            <value>
                <fullName>Salt Lake City</fullName>
            </value>
            <value>
                <fullName>Azure East (PROD)</fullName>
            </value>
            <value>
                <fullName>Azure West (DR)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>