force-app/main/default/objects/Case/fields/Date_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Letter_Sent__c</fullName>
    <description>RUBX-1018: Date the LCA letter was sent</description>
    <label>Date Letter Sent</label>
    <type>Date</type>
</CustomField>