force-app/main/default/objects/Case/fields/Date_Report_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Report_Received__c</fullName>
    <description>RUBX-1018: Date the report was received</description>
    <label>Date Report Received</label>
    <type>Date</type>
</CustomField>