force-app/main/default/objects/Case/fields/Downtime__c.field-meta.xml
<CustomField>
    <fullName>Downtime__c</fullName>
    <description>RUBX-1941: Created for Outage Case Requirement. (formula filed that calculates the difference between start and end time in hours)</description>
    <formula>(floor(( End_Date__c  -  Start_Date__c )*24))
+
(((((End_Date__c - Start_Date__c)*24)-floor((End_Date__c - Start_Date__c)*24))*60)/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The duration of outage in hours and minutes.</inlineHelpText>
    <label>Downtime</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>