force-app/main/default/objects/Case/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>RUBX-1941: Create for Outage Case Requirement</description>
    <label>End Date/Time</label>
    <type>DateTime</type>
</CustomField>