force-app/main/default/objects/Case/fields/Highest_Usage__c.field-meta.xml
<CustomField>
    <fullName>Highest_Usage__c</fullName>
    <description>RUBX-1018: Highest Usage percentage</description>
    <label>Highest Usage %</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>