force-app/main/default/objects/Case/fields/Highest_Usage_Module__c.field-meta.xml
<CustomField>
    <fullName>Highest_Usage_Module__c</fullName>
    <description>RUBX-1018: Text field for Highest Usage Module</description>
    <label>Highest Usage Module</label>
    <length>255</length>
    <type>Text</type>
</CustomField>