force-app/main/default/objects/Case/fields/LCA_Account__c.field-meta.xml
<CustomField>
    <fullName>LCA_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RUBX-1924 New account lookup field to display LCA cases in separate related list on Account layout</description>
    <label>LCA Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LCA Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>