force-app/main/default/objects/Case/fields/Node_Affected__c.field-meta.xml
<CustomField>
    <fullName>Node_Affected__c</fullName>
    <description>RUBX-1941: Created for Outage Cases</description>
    <label>Node Affected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Node 2</fullName>
            </value>
            <value>
                <fullName>Node 3A</fullName>
            </value>
            <value>
                <fullName>Node 3B</fullName>
            </value>
            <value>
                <fullName>Node 4</fullName>
            </value>
            <value>
                <fullName>Node 5</fullName>
            </value>
            <value>
                <fullName>Node 6</fullName>
            </value>
            <value>
                <fullName>Node 7</fullName>
            </value>
            <value>
                <fullName>Node 8</fullName>
            </value>
            <value>
                <fullName>Node 9</fullName>
            </value>
            <value>
                <fullName>Node 10</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>