force-app/main/default/objects/Case/fields/QA_Result__c.field-meta.xml
<CustomField>
    <fullName>QA_Result__c</fullName>
    <description>RUBX-1043 The ability to conduct a peer review or QA on an LCA once it has reached a status of Output Under Analysis</description>
    <inlineHelpText>The ability to conduct a peer review or QA on an LCA once it has reached a status of Output Under Analysis</inlineHelpText>
    <label>QA Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passed - Without Errors</fullName>
            </value>
            <value>
                <fullName>Passed - With Minor Errors</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>