force-app/main/default/objects/Case/fields/RCA_Completed__c.field-meta.xml
<CustomField>
    <fullName>RCA_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RUBX-1941 : Created for Outage Case Requirement.</description>
    <inlineHelpText>Select whether the RCA has been completed. If the RCA has been given to the client, please fill out the filed &quot;RCA Provided On&quot;</inlineHelpText>
    <label>RCA Completed?</label>
    <type>Checkbox</type>
</CustomField>