force-app/main/default/objects/Case/fields/RCA_Provided_On__c.field-meta.xml
<CustomField>
    <fullName>RCA_Provided_On__c</fullName>
    <description>RUBX-1941: Created for Outage Case Requirement.</description>
    <inlineHelpText>Indicate the date the RCA was provided to the customer.</inlineHelpText>
    <label>RCA Provided On</label>
    <type>DateTime</type>
</CustomField>