force-app/main/default/objects/Case/fields/RCA_Required__c.field-meta.xml
<CustomField>
    <fullName>RCA_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RUBX-1941: Created for Outage Case Requirement.</description>
    <label>RCA Required?</label>
    <type>Checkbox</type>
</CustomField>