force-app/main/default/objects/Case/fields/Report_Period_From__c.field-meta.xml
<CustomField>
    <fullName>Report_Period_From__c</fullName>
    <description>RUBX-1018: Report Period start date</description>
    <label>Report Period (From)</label>
    <type>Date</type>
</CustomField>