force-app/main/default/objects/Case/fields/Report_Period_To__c.field-meta.xml
<CustomField>
    <fullName>Report_Period_To__c</fullName>
    <description>RUBX-1018: Report Period end date</description>
    <label>Report Period (To)</label>
    <type>Date</type>
</CustomField>