force-app/main/default/objects/Case/fields/Root_Cause_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_Analysis__c</fullName>
    <description>RUBX-1941: Created for Outage Case Requirement.</description>
    <label>Root Cause Analysis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>