force-app/main/default/objects/Case/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>RUBX-1941: Created as part of Outage requirement.</description>
    <label>Start Date/Time</label>
    <type>DateTime</type>
</CustomField>