force-app/main/default/objects/Case/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <description>RUBX 1940: A more granular description of the case status to denote current case management stage</description>
    <inlineHelpText>A more granular description of the case status to denote current case management stage</inlineHelpText>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Confirmed</fullName>
            </value>
            <value>
                <fullName>Client Unconfirmed</fullName>
            </value>
            <value>
                <fullName>Awaiting Client</fullName>
            </value>
            <value>
                <fullName>Awaiting Triage</fullName>
            </value>
            <value>
                <fullName>Assigned for Analysis</fullName>
            </value>
            <value>
                <fullName>In Triage</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>GS</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Information Provided</fullName>
            </value>
            <value>
                <fullName>Workaround Provided</fullName>
            </value>
            <value>
                <fullName>Fix available</fullName>
            </value>
            <value>
                <fullName>Fix Delivered</fullName>
            </value>
            <value>
                <fullName>Enhancement Delivered</fullName>
            </value>
            <value>
                <fullName>Fix to Formalise</fullName>
            </value>
            <value>
                <fullName>Client Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>