force-app/main/default/objects/Case/fields/System_Environment__c.field-meta.xml
<CustomField>
    <fullName>System_Environment__c</fullName>
    <description>RUBX-1018: Picklist; Default value of “Production”, also option for “Backup” and “Test”.</description>
    <label>System Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Production</fullName>
                <default>true</default>
                <label>Production</label>
            </value>
            <value>
                <fullName>Backup</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>