force-app/main/default/objects/Case/recordTypes/Customer_Service.recordType-meta.xml
<RecordType>
    <fullName>Customer_Service</fullName>
    <active>true</active>
    <businessProcess>Customer Support</businessProcess>
    <description>Record Type to track cases created for Customer Service Case</description>
    <label>Customer Service</label>
</RecordType>