force-app/main/default/objects/Case/recordTypes/License_Compliance_Audit.recordType-meta.xml
<RecordType>
    <fullName>License_Compliance_Audit</fullName>
    <active>true</active>
    <businessProcess>License Compliance Audit</businessProcess>
    <description>Record Type to track cases created for License Compliance Audit</description>
    <label>License Compliance Audit</label>
</RecordType>