force-app/main/default/objects/Case/recordTypes/Outage.recordType-meta.xml
<RecordType>
    <fullName>Outage</fullName>
    <active>true</active>
    <businessProcess>Outage</businessProcess>
    <description>Record Type to track cases created for Outage</description>
    <label>Outage</label>
</RecordType>