force-app/main/default/objects/Case/validationRules/Account_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_is_required</fullName>
    <active>true</active>
    <description>RUBX-1164: LCA Case Field Validation</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &#39;License_Compliance_Audit&#39;,
ISNULL( LCA_Account__c ),
NOT($Setup.Bypass_Validations__c.Disable__c)
)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Account is required</errorMessage>
</ValidationRule>