force-app/main/default/objects/Case/validationRules/Asset_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Asset_is_required</fullName>
    <active>true</active>
    <description>RUBX-1164: LCA Case Field Validation</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &#39;License_Compliance_Audit&#39;,
ISNULL(AssetId),
NOT($Setup.Bypass_Validations__c.Disable__c)
)</errorConditionFormula>
    <errorDisplayField>AssetId</errorDisplayField>
    <errorMessage>Asset is required</errorMessage>
</ValidationRule>