force-app/main/default/objects/Case/validationRules/Audit_Method_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Audit_Method_required</fullName>
    <active>true</active>
    <description>RUBX-1164: LCA Case Field Validation</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &#39;License_Compliance_Audit&#39;,
ISPICKVAL(Status, &#39;Customer Communication&#39;),
ISPICKVAL( Audit_Method__c, &#39;&#39; ),
NOT($Setup.Bypass_Validations__c.Disable__c)
)</errorConditionFormula>
    <errorDisplayField>Audit_Method__c</errorDisplayField>
    <errorMessage>Audit Method is required.</errorMessage>
</ValidationRule>