force-app/main/default/objects/Case/validationRules/Backup_System_Information_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Backup_System_Information_required</fullName>
    <active>true</active>
    <description>RUBX-1164: LCA Case Field Validation</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &#39;License_Compliance_Audit&#39;,
OR(ISPICKVAL(Status, &#39;Result for Concurrence&#39;),ISPICKVAL(Status, &#39;Audited - Pending Opportunity&#39;),ISPICKVAL(Status, &#39;Audited (Closed)&#39;)),
ISPICKVAL(  Backup_System_s_Information__c, &#39;&#39; ),
ISPICKVAL( System_Environment__c ,&#39;Production&#39;),
NOT($Setup.Bypass_Validations__c.Disable__c)
)</errorConditionFormula>
    <errorDisplayField>Backup_System_s_Information__c</errorDisplayField>
    <errorMessage>Backup System(s) Information is required.</errorMessage>
</ValidationRule>