force-app/main/default/objects/Case/validationRules/Contact_must_belong_to_the_account.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_must_belong_to_the_account</fullName>
    <active>true</active>
    <description>RUBX-1164: LCA Case Field Validation</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &#39;License_Compliance_Audit&#39;,
ISPICKVAL(Status, &#39;Customer Communication&#39;),
NOT(ISNULL( ContactId )),
Contact.AccountId !=  LCA_Account__r.Id,
NOT($Setup.Bypass_Validations__c.Disable__c)
)</errorConditionFormula>
    <errorDisplayField>ContactId</errorDisplayField>
    <errorMessage>Contact Name is required and must belong to the same account as the case.</errorMessage>
</ValidationRule>