force-app/main/default/objects/Case/validationRules/Contract_Number_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Number_required</fullName>
    <active>true</active>
    <description>RUBX-1164: LCA Case Field Validation</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &#39;License_Compliance_Audit&#39;,
ISPICKVAL(Status, &#39;Output Under Analysis&#39;),
ISBLANK(Contract__c),
NOT($Setup.Bypass_Validations__c.Disable__c)
)</errorConditionFormula>
    <errorDisplayField>Contract__c</errorDisplayField>
    <errorMessage>Contract is required.</errorMessage>
</ValidationRule>