force-app/main/default/objects/Case/validationRules/CS_Contact_must_belong_to_CS_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>CS_Contact_must_belong_to_CS_Account</fullName>
    <active>true</active>
    <description>RUBX-1933 : Customer Lookup</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &#39;Customer_Service&#39;,
Contact.AccountId !=   AccountId,
NOT($Setup.Bypass_Validations__c.Disable__c)
)</errorConditionFormula>
    <errorDisplayField>ContactId</errorDisplayField>
    <errorMessage>Please select contact which belongs to the same account added to the case</errorMessage>
</ValidationRule>