force-app/main/default/objects/Case/validationRules/Date_Letter_Sent_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Letter_Sent_required</fullName>
    <active>true</active>
    <description>RUBX-1164: LCA Case Field Validation</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &#39;License_Compliance_Audit&#39;,
ISPICKVAL(Status, &#39;Customer Communication&#39;),
ISNULL(Date_Letter_Sent__c),
NOT($Setup.Bypass_Validations__c.Disable__c)
)</errorConditionFormula>
    <errorDisplayField>Date_Letter_Sent__c</errorDisplayField>
    <errorMessage>Date Letter Sent is required.</errorMessage>
</ValidationRule>