force-app/main/default/objects/Case/validationRules/Highest_Usage_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Highest_Usage_required</fullName>
    <active>true</active>
    <description>RUBX-1164: LCA Case Field Validation</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &#39;License_Compliance_Audit&#39;,
OR(ISPICKVAL(Status, &#39;Result for Concurrence&#39;),ISPICKVAL(Status, &#39;Audited - Pending Opportunity&#39;),ISPICKVAL(Status, &#39;Audited (Closed)&#39;)),
ISBLANK(Highest_Usage__c),
NOT($Setup.Bypass_Validations__c.Disable__c)
)</errorConditionFormula>
    <errorDisplayField>Highest_Usage__c</errorDisplayField>
    <errorMessage>Highest Usage % is required.</errorMessage>
</ValidationRule>